--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-
+<html>
+https://www.google.com/url?sa=i&url=https%3A%2F%2Faif.ru%2Fsociety%2Fnature%2Fskolko_vesit_oblako_i_pochemu_ono_ne_padaet_na_zemlyu&psig=AOvVaw3WHV6DYwZZs7yb6cARHTEC&ust=1653058099677000&source=images&cd=vfe&ved=0CAwQjRxqFwoTCLjtmrnn6_cCFQAAAAAdAAAAABAD
+</html>
